--- a/storage/templates/storage/detail.html
+++ b/storage/templates/storage/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %} <title> Detailed {{current_storage.name}} info </title> {% endblock %}
 {% block content %}
     <h2>Now you are in <B>{{current_storage.name}}</B></h2>
     {% if truck_list %}
