used url template tag instead of hardcode

--- a/storage/templates/storage/detail.html
+++ b/storage/templates/storage/detail.html
@@ -11,5 +11,5 @@
     {% else %}
         <p>No trucks are available.</p>
     {% endif %}
-    <link><a href="/storages/index">Back to storages</a>
+    <link><a href="{% url 'all-storages' %}">Back to storages</a>
 {% endblock %}
