--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="{% static 'truck_icon.png' %}" style="hight: 35px; width: 40px;">Storages Manage Service</a>
         <ul class="nav ">
-          <li class="nav-item"><a class="nav-link active" href="/storages/index">Storages</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'all-storages' %}">Storages</a></li>
           <li class="nav-item"><a class="nav-link disabled" href="#">Profile</a></li>
           <li class="nav-item"><a class="nav-link disabled" href="#">Logout</a></li>
         </ul>
