--- a/storage/templates/storage/index.html
+++ b/storage/templates/storage/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-    <form action="{% url 'all-storages'%}" method="post">
+    <form action="{% url 'create-storage'%}" method="post" class="form">
         {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Submit">
+        {{ form.as_p }}
+        <input type="submit" name="submit" value="Submit">
     </form>
     {% if storage_list %}
         <ul>
