--- a/storage/templates/storage/index.html
+++ b/storage/templates/storage/index.html
@@ -3,7 +3,7 @@
     <form action="{% url 'create-storage'%}" method="post" class="form">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" name="submit" value="Submit">
+        <input type="submit" name="submit" value="Submit" class="btn btn-primary">
     </form>
     {% if storage_list %}
         <table class="table table-striped">
