--- a/storage/templates/storage/index.html
+++ b/storage/templates/storage/index.html
@@ -1,31 +1,54 @@
 {% extends 'base.html' %}
+{% load widget_tweaks %}
 {% block content %}
-    <form action="{% url 'create-storage'%}" method="post" class="form">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="submit" value="Submit" class="btn btn-primary">
-    </form>
+    <div class="container bg-light">
+        <h3>Register new storage</h3>
+        <form action="{% url 'create-storage'%}" method="post">
+            {% csrf_token %}
+            {% for field in form.visible_fields %}
+                <div class="form-group">
+                    {{ field.label_tag }}
+
+                    {% if form.is_bound %}
+                        {% if field.errors %}
+                            {% render_field field class="form-control is-invalid" %}
+                            {% for error in field.errors %}
+                                <div class="invalid-feedback"> {{ error }} </div>
+                            {% endfor %}
+                        {% else %}
+                            {% render_field field class="form-control is-valid" placeholder=field.help_text %}
+                        {% endif %}
+                    {% else %}
+                        {% render_field field class="form-control" placeholder=field.help_text %}
+                    {% endif %}
+                </div>
+            {% endfor %}
+            <div class="col-auto"><input type="submit" name="submit" value="Submit" class="btn btn-primary"></div>
+        </form>
+    </div>
     {% if storage_list %}
-        <table class="table table-striped">
-            <thead class="thead-light">
-                <tr>
-                    <th><a href="{% url 'all-storages' %}?sort=id&order={{ change_to | urlencode }}">ID</a></th>
-                    <th><a href="{% url 'all-storages' %}?sort=name&order={{ change_to | urlencode }}">Name</a></th>
-                    <th><a href="{% url 'all-storages' %}?sort=location&order={{ change_to | urlencode }}">Location</a></th>
-                    <th><a href="{% url 'all-storages' %}?sort=trucks_count&order={{ change_to | urlencode }}">Available trucks</a></th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for storage in storage_list %}
+        <div class="container">
+            <table class="table table-striped">
+                <thead class="thead-light">
                     <tr>
-                        <th>{{storage.id}}</th>
-                        <th><a href="{% url 'one-storage' storage.id %}">{{ storage.name }}</a></th>
-                        <th>{{storage.location}}</th>
-                        <th> {{storage.trucks_count}}</th>
+                        <th><a href="{% url 'all-storages' %}?sort=id&order={{ change_to | urlencode }}">ID</a></th>
+                        <th><a href="{% url 'all-storages' %}?sort=name&order={{ change_to | urlencode }}">Name</a></th>
+                        <th><a href="{% url 'all-storages' %}?sort=location&order={{ change_to | urlencode }}">Location</a></th>
+                        <th><a href="{% url 'all-storages' %}?sort=trucks_count&order={{ change_to | urlencode }}">Available trucks</a></th>
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    {% for storage in storage_list %}
+                        <tr>
+                            <th>{{storage.id}}</th>
+                            <th><a href="{% url 'one-storage' storage.id %}">{{ storage.name }}</a></th>
+                            <th>{{storage.location}}</th>
+                            <th> {{storage.trucks_count}}</th>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     {% else %}
         <p>No storages are available.</p>
     {% endif %}
