--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-    <footer class="text-center text-lg-start bg-light text-muted" style="position: fixed; width: 100%; bottom: 0;">
+    <footer class="text-center text-lg-start bg-light text-muted" style="width: 100%; bottom: 0;">
       <p>Project made with Django, SQL, Redis</p>
       <p>
         Made by <a href="https://github.com/phantom-profile" target="_blank">phantom-profile</a>
