--- a/storage/templates/storage/index.html
+++ b/storage/templates/storage/index.html
@@ -1,28 +1,10 @@
 {% extends 'base.html' %}
-{% load widget_tweaks %}
 {% block content %}
     <div class="container bg-light">
         <h3>Register new storage</h3>
         <form action="{% url 'create-storage'%}" method="post">
             {% csrf_token %}
-            {% for field in form.visible_fields %}
-                <div class="form-group">
-                    {{ field.label_tag }}
-
-                    {% if form.is_bound %}
-                        {% if field.errors %}
-                            {% render_field field class="form-control is-invalid" %}
-                            {% for error in field.errors %}
-                                <div class="invalid-feedback"> {{ error }} </div>
-                            {% endfor %}
-                        {% else %}
-                            {% render_field field class="form-control is-valid" placeholder=field.help_text %}
-                        {% endif %}
-                    {% else %}
-                        {% render_field field class="form-control" placeholder=field.help_text %}
-                    {% endif %}
-                </div>
-            {% endfor %}
+            {% include 'form_fields.html' with form=form %}
             <div class="col-auto"><input type="submit" name="submit" value="Submit" class="btn btn-primary"></div>
         </form>
     </div>
