included it to page

--- a/storage/templates/storage/index.html
+++ b/storage/templates/storage/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
   <form action="{% url 'create-storage'%}" method="post" class="form">
     {% csrf_token %}
@@ -6,6 +7,7 @@
     <input type="submit" name="submit" value="Submit" class="btn btn-primary">
   </form>
   {% if storage_list %}
+    <div id="storage-weather-info" class="alert alert-primary container"> Weather Info field</div>
     <table class="table table-striped">
       <thead class="thead-light">
         <tr>
@@ -13,6 +15,7 @@
           <th><a href="{% url 'all-storages' %}?sort=name&order={{ change_to | urlencode }}">Name</a></th>
           <th><a href="{% url 'all-storages' %}?sort=location&order={{ change_to | urlencode }}">Location</a></th>
           <th><a href="{% url 'all-storages' %}?sort=trucks_count&order={{ change_to | urlencode }}">Available trucks</a></th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
@@ -21,7 +24,8 @@
             <th>{{storage.id}}</th>
             <th><a href="{% url 'one-storage' storage.id %}">{{ storage.name }}</a></th>
             <th>{{storage.location}}</th>
-            <th> {{storage.trucks_count}}</th>
+            <th>{{storage.trucks_count}}</th>
+            <th><a href="#" onclick="show_weather('{{storage.location}}')">Get Weather</a></th>
           </tr>
         {% endfor %}
       </tbody>
@@ -29,4 +33,8 @@
   {% else %}
     <p>No storages are available.</p>
   {% endif %}
+{% endblock %}
+
+{% block javascript %}
+  <script type="text/javascript" src="{% static 'current_weather.js' %}"></script>
 {% endblock %}
