updated CreditCard model, but work not ended added test template and test view

--- a/users/templates/index.html
+++ b/users/templates/index.html
@@ -1,4 +1,8 @@
 {% block content %}
+    <form>
+        {% csrf_token %}
+        <input type="submit" value="Submit">
+    </form>
     {% for card in cards %}
         {{card}}<br>
     {% endfor %}
