--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,13 @@
         <a class="navbar-brand" href="#"><img src="{% static 'truck_icon.png' %}" style="hight: 35px; width: 40px;">Storages Manage Service</a>
         <ul class="nav ">
           <li class="nav-item"><a class="nav-link active" href="{% url 'all-storages' %}">Storages</a></li>
-          <li class="nav-item"><a class="nav-link disabled" href="#">Profile</a></li>
-          <li class="nav-item"><a class="nav-link disabled" href="#">Logout</a></li>
+          {% if user.is_authenticated %}
+            <li class="nav-item"><a class="nav-link active" href="{% url 'profile' %}">Profile</a></li>
+            <li class="nav-item"><a class="nav-link active" href="{% url 'logout' %}">Logout</a></li>
+          {% else %}
+            <li class="nav-item"><a class="nav-link active" href="{% url 'profile' %}">Log in</a></li>
+            <li class="nav-item"><a class="nav-link active" href="{% url 'register' %}">Sing up</a></li>
+          {% endif %}
         </ul>
       </div>
     </nav>
