--- a/users/templates/index.html
+++ b/users/templates/index.html
@@ -1,5 +1,5 @@
+{% extends 'base.html' %}
 {% block content %}
-{% base html %}
     {% for card in cards %}
         {{card}}<br>
     {% endfor %}
