--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -1,13 +1,28 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-  <h2><b>Welcome to your page @{{ user.username }}!</b></h2>
-  <div class="card" style="width: 23rem;">
-    <img src="{% static 'user_without_photo.png' %}" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h3 class="card-title">Your email: {{ user.email }}</h3>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Add credit card to your account</a>
+<h2><b>Welcome to your page @{{ user.username }}!</b></h2>
+<div class="container-fluid">
+  <div class="row">
+    <div style="width: 26rem;">
+      <div class="card" style="width: 23rem;">
+        <img src="{% static 'user_without_photo.png' %}" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h3 class="card-title">Your email: {{ user.email }}</h3>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Add credit card to your account</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <h5>Currencies convertor:</h5>
+      <form method="get" action="{% url 'convertor' %}" id="id_currencies_form">
+        {% include 'compact_form.html' with form=convertor_form btn="Convert" %}
+      </form>
     </div>
   </div>
+</div>
+{% endblock %}
+{% block javascript %}
+  <script type="text/javascript" src="{% static 'ajax_tools.js' %}"></script>
 {% endblock %}
