added ajax handler

--- a/storage/templates/storage/index.html
+++ b/storage/templates/storage/index.html
@@ -45,5 +45,5 @@
 {% endblock %}
 
 {% block javascript %}
-  <script type="text/javascript" src="{% static 'current_weather.js' %}"></script>
+  <script type="text/javascript" src="{% static 'ajax_tools.js' %}"></script>
 {% endblock %}
