--- a/templates/compact_form.html
+++ b/templates/compact_form.html
@@ -1,5 +1,5 @@
 {% load widget_tweaks %}
-<div class="form-row">
+<div class="form-row align-items-center">
   {% for field in form.visible_fields %}
     <div class="col-md-2">
       {{ field.label_tag }}
