--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
     {% load static %}
     <link rel="icon" type="image/x-icon" href="{% static 'truck_icon.png' %}">
     {% block title %} <title>Storages Manage</title> {% endblock %}
