--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="{% static 'truck_icon.png' %}" style="hight: 35px; width: 40px;">Storages Manage Service</a>
         <ul class="nav ">
-          <li class="nav-item"><a class="nav-link active" href="#" id="converter_link">Converter</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#" id="converter_link">Convertor</a></li>
           <li class="nav-item"><a class="nav-link active" href="{% url 'all-storages' %}">Storages</a></li>
           {% if user.is_authenticated %}
             <li class="nav-item"><a class="nav-link active" href="{% url 'profile' %}">Profile</a></li>
