moved ajax scripts to base html

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
+    <script type="text/javascript" src="{% static 'ajax_tools.js' %}"></script>
     {% block javascript %}
     {% endblock javascript %}
     <footer class="text-center text-lg-start bg-light text-muted" style="width: 100%; bottom: 0;">
