--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
     {% block javascript %}
     {% endblock javascript %}
     <footer class="text-center text-lg-start bg-light text-muted" style="width: 100%; bottom: 0;">
-      <p>Project made with Django, SQL, Redis</p>
+      <p>Project made with Django, SQL, Redis, JS, Bootstrap</p>
       <p>
         Made by <a href="https://github.com/phantom-profile" target="_blank">phantom-profile</a>
         and <a href="https://github.com/denisartis" target="_blank">denisartis</a>
