--- a/users/templates/index.html
+++ b/users/templates/index.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
+    <form action="{% url 'trust-card' %}" method="post">
+      {% csrf_token %}
+      {% include 'form_fields.html' with form=form %}
+      <div class="col-auto"><input type="submit" name="submit" value="Submit" class="btn btn-primary"></div>
+    </form>
     {% for card in cards %}
         {{card}}<br>
     {% endfor %}
