--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,27 @@
         </ul>
       </div>
     </nav>
-    {% block content %} {% endblock %}
+    <div class="container-fluid" style="z-index: 9999; position:fixed;">
+    {% if messages %}
+        {% for message in messages %}
+          <div class="row ">
+            <div class="col-md-8"></div>
+            <div class="{{message.tags}} col-sm" role="alert">
+              {{message}}
+              <button type="button" class="close" data-dismiss="alert" aria-label="close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          </div>
+          
+        {% endfor %}
+      {% endif %}
+  </div>
+
+    {% block content %}
+    
+    
+    {% endblock %}
  
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
