--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -2,7 +2,7 @@
   {% if messages %}
     {% for message in messages %}
       <div class="{{message.tags}}" role="alert">
-        {{message}}
+        {{message|safe}}
         <button type="button" class="close" data-dismiss="alert" aria-label="close">
           <span aria-hidden="true">&times;</span>
         </button>
